GT and total